# CRK-model-HG

./: .env.example  .gitignore  README.md  freezer.env.example  pyproject.toml
.github/workflows/: ci.yml
claudedocs/: 0723_strategy_reading_list.md  research_judgment_performance_20260722.md
crk_model/: __init__.py
crk_model/adapters/: __init__.py  analyze_cli.py  avi_frames.py  http_app.py  label_cli.py  serve.py  yolo_detector.py
crk_model/core/: __init__.py  config.py  policy.py  profiles.py  types.py
crk_model/frames/: __init__.py  batch.py  bundle.py  motion_gate.py
crk_model/gateway/: __init__.py  state_machine.py
crk_model/ingest/: __init__.py  bocpd.py  idempotency.py  loadcell.py
crk_model/judgment/: __init__.py  interfaces.py  likelihood.py  router.py  strategies.py  strict.py
crk_model/ledger/: __init__.py  archive.py  barrier.py  cells.py  cross_zone.py  events.py  ghost_ledger.py  journal.py  settler.py  shadow.py  tray_memory.py
crk_model/perception/: __init__.py  detector.py  early_termination.py  filters.py  motion_evidence.py  voting.py
crk_model/service/: __init__.py  model_service.py  pipeline.py  snapshot.py  worker.py
docs/: 0711_idea.md  0713_held_object_demotion.md  0722_issue16_arbitration_design.md  0722_weight_likelihood_design.md  0723_field_test_plan.md  0723_tracklet_cost_benefit.md  0724_fridge_field_test_plan.md  0724_shadow_status_review.md  ARCHITECTURE_DIAGRAMS.md  OPTIMIZED_ARCHITECTURE.md  REDESIGN_RATIONALE_QA.md  baseline_and_judgment_iv.md  cross_zone_penalty.md  fix_logs.md  improvements_over_original.md
scripts/: convert_engine.sh  install_jetson_torch.sh  jetson_env.sh  live_engine_preview.py  setup_jetson.sh
tests/: conftest.py  test_adapters.py  test_analyze_cli.py  test_cells.py  test_cross_zone.py  test_frames.py  test_frames_streaming.py  test_gateway.py  test_ghost_ledger.py  test_ingest.py  test_judgment.py  test_ledger.py  test_lifecycle.py  test_likelihood.py  test_ops_logging.py  test_perception.py  test_product_mapping.py  test_service.py  test_session_archive.py  test_tray_memory.py  test_wire_contract.py
