[project]
name = "crk-model-hg"
version = "0.1.0"
description = "CRK 스마트 자판기 모델 서비스 — 그린필드 재설계 (GREENFIELD_DESIGN_GUIDE D1~D10 권장안 구현)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
# Jetson 서버 어댑터용 — ultralytics/torch/cv2/numpy는 여기 두지 않는다
# (JetPack system-site 사용, CPU wheel 오염 방지: scripts/setup_jetson.sh 참조)
jetson = ["fastapi>=0.100.0", "uvicorn[standard]>=0.23.0"]

[project.scripts]
model-service-hg = "crk_model.adapters.serve:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["crk_model*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
